# tlsf-tools meson options

option(
  'sanitize',
  type: 'combo',
  choices: ['none', 'address', 'undefined', 'address,undefined'],
  value: 'none',
  description: 'Enable sanitizers (for development builds)',
)

option(
  'oxidd',
  type: 'feature',
  value: 'enabled',
  description: 'In-process OxiDD BDD safety/GR(1) solver for tlsfcompose ' +
               '(normal release builds require external/oxidd artifacts; ' +
               'use -Doxidd=disabled for a reduced developer build)',
)

option(
  'cpu',
  type: 'combo',
  choices: ['baseline', 'x86-64-v2', 'avx2', 'avx512', 'neon', 'native'],
  value: 'baseline',
  description: 'Target CPU ISA for the compile-time SIMD kernels (include/' +
               'tlsf/simd.h) and compiler auto-vectorization. baseline = ' +
               'portable scalar; x86-64-v2/avx2/avx512 = x86 SIMD; neon = ' +
               'AArch64 NEON; native = -march=native for this machine.',
)

option(
  'research_tools',
  type: 'boolean',
  value: false,
  description: 'Build bench/template research CLIs',
)
